# YachtDice

./: CMakeLists.txt  README.md
include/: YachtCombination.h  mainwindow.h
resources/: resource.qrc
src/: mainwindow.cpp
ui/: mainwindow.ui
